--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,2 +1,34 @@
-{{message}}
-{{error.stack}}
+<div class="container mt-2">
+  <div class="row">
+    <div class="col">
+      <img src="./images/logo-airbnb.png" alt="logo of Airbnb" />
+    </div>
+    <div class="col text-end">
+      <form>
+        <button type="button" class="btn btn-outline-secondary">
+          Log In
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="bg-danger p-3 mt-3 mb-3 text-dark-red bg-opacity-25 rounded">
+    {{message}}
+  </div>
+  <span>{{error.stack}}</span>
+  <ul>
+    <li>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt,
+      quia.
+    </li>
+    <li>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque,
+      cupiditate.
+    </li>
+    <li>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur,
+      mollitia?
+    </li>
+  </ul>
+</div>
