fixed logo path

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,7 +1,7 @@
 <div class="container mt-2">
   <div class="row">
     <div class="col">
-      <img src="./images/logo-airbnb.png" alt="logo of Airbnb" />
+      <img src="/images/logo-airbnb.png" alt="logo of Airbnb" />
     </div>
     <div class="col text-end">
       <form>
