--- a/views/houses/create.hbs
+++ b/views/houses/create.hbs
@@ -1,10 +1,11 @@
 <div class="container mt-2">
   <div class="row">
     <div class="col">
-      <img src="./images/logo-airbnb.png" alt="logo of Airbnb" />
+      <img src="/images/logo-airbnb.png" alt="logo of Airbnb" />
     </div>
     <div class="col text-end">
-      <button type="button" class="btn btn-outline-secondary">Kimmy</button>
+      <button type="button" class="btn btn-outline-secondary"><img src="https://randomuser.me/api/portraits/women/11.jpg"
+          class="tiny rounded-circle" />Kimmy</button>
       <button type="button" class="btn btn-outline-secondary">
         Log Out
       </button>
@@ -12,44 +13,6 @@
   </div>
 </div>
 
-<!-- content -->
-<div class="content">
-  <div class="container mt-5">
-    <h2>List A House</h2>
-    <form>
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label"
-          >Short Title</label
-        >
-        <input type="email" class="form-control" />
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label"
-          >Description</label
-        >
-        <textarea class="form-control" rows="3"></textarea>
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label"
-          >Number of Rooms</label
-        >
-        <input type="number" class="form-control" />
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label"
-          >Location</label<div class="container mt-2">
-  <div class="row">
-    <div class="col">
-      <img src="./images/logo-airbnb.png" alt="logo of Airbnb" />
-    </div>
-    <div class="col text-end">
-      <button type="button" class="btn btn-outline-secondary">Kimmy</button>
-      <button type="button" class="btn btn-outline-secondary">
-        Log Out
-      </button>
-    </div>
-  </div>
-</div>
 
 <!-- content -->
 <div class="content">
@@ -77,78 +40,6 @@
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label"
           >Location</label
-        >
-        <select class="form-select" aria-label="Default select example">
-          <option selected>Koh Samui</option>
-          <option value="1">Koh Phangan</option>
-          <option value="2">Bali</option>
-          <option value="3">Phuket</option>
-        </select>
-      </div>
-      <label for="basic-url" class="form-label">Price (per Night)</label>
-      <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon3">$</span>
-        <input
-          type="number"
-          class="form-control"
-          id="basic-url"
-          aria-describedby="basic-addon3"
-        />
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label"
-          >Add Photos (up to 9)</label
-        >
-        <input
-          type="text"
-          class="form-control mt-1"
-          placeholder="http://..."
-        />
-        <input
-          type="text"
-          class="form-control mt-1"
-          placeholder="http://..."
-        />
-        <input
-          type="text"
-          class="form-control mt-1"
-          placeholder="http://..."
-        />
-        <input
-          type="text"
-          class="form-control mt-1"
-          placeholder="http://..."
-        />
-        <input
-          type="text"
-          class="form-control mt-1"
-          placeholder="http://..."
-        />
-        <input
-          type="text"
-          class="form-control mt-1"
-          placeholder="http://..."
-        />
-        <input
-          type="text"
-          class="form-control mt-1"
-          placeholder="http://..."
-        />
-        <input
-          type="text"
-          class="form-control mt-1"
-          placeholder="http://..."
-        />
-        <input
-          type="text"
-          class="form-control mt-1"
-          placeholder="http://..."
-        />
-      </div>
-      <button type="button" class="btn btn-success">Submit</button>
-    </form>
-  </div>
-</div>
         >
         <select class="form-select" aria-label="Default select example">
           <option selected>Koh Samui</option>
