--- a/views/houses/list.hbs
+++ b/views/houses/list.hbs
@@ -1,12 +1,12 @@
 <div class="container mt-2">
   <div class="row">
     <div class="col">
-      <img src="./images/logo-airbnb.png" alt="logo of Airbnb" />
+      <img src="/images/logo-airbnb.png" alt="logo of Airbnb" />
     </div>
     <div class="col text-end">
       <form>
         <button type="button" class="btn btn-outline-secondary">
-          <img src=https://randomuser.me/api/portraits/women/11.jpg
+          <img src="https://randomuser.me/api/portraits/women/11.jpg"
           class="tiny rounded-circle" />Kimmy
         </button>
         <button type="button" class="btn btn-outline-secondary">
