--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -5,7 +5,7 @@
   >
   <form>
     <img
-      src="./images/logo-airbnb.png"
+      src="/images/logo-airbnb.png"
       class="card-img-top pt-5 position-absolute top-0 start-50 translate-middle-x"
       alt="..."
     />
