--- a/views/houses/create.hbs
+++ b/views/houses/create.hbs
@@ -1,7 +1,9 @@
 <div class="container mt-2">
   <div class="row">
     <div class="col">
-      <img src="/images/logo-airbnb.png" alt="logo of Airbnb" />
+      <a href="/houses">
+        <img src="/images/logo-airbnb.png" alt="logo of Airbnb" />
+      </a>
     </div>
     <div class="col text-end">
       <button type="button" class="btn btn-outline-secondary"><img src="https://randomuser.me/api/portraits/women/11.jpg"
