--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,19 +1,5 @@
-<div class="container mt-2">
-  <div class="row">
-    <div class="col">
-      <a href="/houses">
-        <img src="/images/logo-airbnb.png" alt="logo of Airbnb" />
-      </a>
-    </div>
-    <div class="col text-end">
-      <form>
-        <button type="button" class="btn btn-outline-secondary">
-          Log In
-        </button>
-      </form>
-    </div>
-  </div>
-</div>
+{{>nav}}
+
 <div class="container">
   <div class="bg-danger p-3 mt-3 mb-3 text-dark-red bg-opacity-25 rounded">
     {{message}}
