--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,19 +1,4 @@
-<div class="container mt-2">
-  <div class="row">
-    <div class="col">
-      <a href="/houses">
-        <img src="/images/logo-airbnb.png" alt="logo of Airbnb" />
-      </a>
-    </div>
-    <div class="col text-end">
-      <button type="button" class="btn btn-outline-secondary"><img src="https://randomuser.me/api/portraits/women/11.jpg"
-          class="tiny rounded-circle" />Kimmy</button>
-      <button type="button" class="btn btn-outline-secondary">
-        Log Out
-      </button>
-    </div>
-  </div>
-</div>
+{{>nav}}
 
 <!-- content -->
 <div class="container mt-5">
