--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -6,7 +6,7 @@
   <form>
     <img
       src="/images/logo-airbnb.png"
-      class="card-img-top pt-5 position-absolute top-0 start-50 translate-middle-x"
+      class="mx-auto logo-signup"
       alt="..."
     />
     <div class="card-body pt-5">
