fixed my html signup

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -13,6 +13,26 @@
       
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label"
+            >Your Full Name</label
+          >
+          <input
+            type="email"
+            class="form-control"
+            aria-describedby="emailHelp"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label"
+            >Profile Picture</label
+          >
+          <input
+            type="email"
+            class="form-control"
+            aria-describedby="emailHelp"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label"
             >Email address</label
           >
           <input
@@ -31,7 +51,7 @@
             aria-describedby="emailHelp"
           />
         </div>
-        <button type="button" class="btn btn-success mb-3">Login</button>
+        <button type="button" class="btn btn-success mb-3">Signup</button>
       </form>
       <div>
       <span>New to AirBnB?</span>
