--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -3,7 +3,7 @@
     class="card pt-5 position-absolute top-50 start-50 translate-middle"
     style="width: 20rem"
   >
-  <form>
+  <form action="/auth/signup" method="POST">
     <img
       src="/images/logo-airbnb.png"
       class="mx-auto logo-signup"
@@ -15,8 +15,8 @@
           <label for="exampleInputEmail1" class="form-label"
             >Your Full Name</label
           >
-          <input
-            type="email"
+          <input name="name"
+            type="text"
             class="form-control"
             aria-describedby="emailHelp"
           />
@@ -25,8 +25,8 @@
           <label for="exampleInputEmail1" class="form-label"
             >Profile Picture</label
           >
-          <input
-            type="email"
+          <input name="avatar"
+            type="text"
             class="form-control"
             aria-describedby="emailHelp"
           />
@@ -35,7 +35,7 @@
           <label for="exampleInputEmail1" class="form-label"
             >Email address</label
           >
-          <input
+          <input name="email"
             type="email"
             class="form-control"
             aria-describedby="emailHelp"
@@ -45,13 +45,13 @@
           <label for="exampleInputEmail1" class="form-label"
             >Password</label
           >
-          <input
+          <input name="password"
             type="password"
             class="form-control"
             aria-describedby="emailHelp"
           />
         </div>
-        <button type="button" class="btn btn-success mb-3">Signup</button>
+        <button class="btn btn-success mb-3">Signup</button>
       </form>
       <div>
       <span>New to AirBnB?</span>
