--- a/views/login.hbs
+++ b/views/login.hbs
@@ -12,26 +12,26 @@
     <div class="card-body pt-5">
       
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label" name="email"
+          <label for="exampleInputEmail1" class="form-label"
             >Email address</label
           >
-          <input
+          <input name="email"
             type="email"
             class="form-control"
             aria-describedby="emailHelp"
           />
         </div>
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label" name="password"
+          <label for="exampleInputEmail1" class="form-label"
             >Password</label
           >
-          <input
+          <input name="password"
             type="password"
             class="form-control"
             aria-describedby="emailHelp"
           />
         </div>
-        <button type="button" class="btn btn-success mb-3">Login</button>
+        <button class="btn btn-success mb-3">Login</button>
       </form>
       <div>
       <span>New to AirBnB?</span>
