added user in hbs pages

--- a/views/houses/list.hbs
+++ b/views/houses/list.hbs
@@ -1,4 +1,4 @@
-{{>nav}}
+{{>nav user=user}}
 
 <!-- filter -->
 <div class="filter bg-light pt-2">
@@ -62,9 +62,8 @@
             aria-label="First name"
           />
         </div>
-
         <div class="col">
-          <button type="button" class="btn btn-success">Search</button>
+          <button class="btn btn-success">Search</button>
         </div>
       </div>
     </form>
