--- a/views/houses/one.hbs
+++ b/views/houses/one.hbs
@@ -1,4 +1,4 @@
-{{>nav}}
+{{>nav user=user}}
 
 <!-- pictures -->
 <div class="pictures border-bottom border-top mt-2">
@@ -104,7 +104,7 @@
           <form>
             <div class="mt-3">
               <textarea class="form-control" rows="5" placeholder="Send the host a message"></textarea>
-              <button type="button" class="btn btn-success mt-2">Request Booking</button>
+              <button class="btn btn-success mt-2">Request Booking</button>
             </div>
           </form>
         </div>
