--- a/views/houses/create.hbs
+++ b/views/houses/create.hbs
@@ -1,4 +1,4 @@
-{{>nav}}
+{{>nav user=user}}
 
 <!-- content -->
 <div class="content">
@@ -94,7 +94,7 @@
           placeholder="http://..."
         />
       </div>
-      <button type="button" class="btn btn-success">Submit</button>
+      <button class="btn btn-success">Submit</button>
     </form>
   </div>
 </div>
