fixed some HTML

--- a/views/houses/edit.hbs
+++ b/views/houses/edit.hbs
@@ -102,10 +102,8 @@
           placeholder="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2002/house_02_01.png"
         />
       </div>
-      <button type="button" class="btn btn-success">Save Changes</button>
-      <button type="button" class="btn btn-danger d-block mt-2">
-        Delete House
-      </button>
+      <button class="btn btn-success">Save Changes</button>
+      <button class="btn btn-danger d-block mt-2">Delete House</button>
     </form>
   </div>
 </div>
