--- a/views/houses/one.hbs
+++ b/views/houses/one.hbs
@@ -85,8 +85,8 @@
             <label>Leave a Review</label>
             <div class="mb-3">
               <textarea class="form-control mb-1" rows="6"></textarea>
-              <button type="button" class="btn btn-outline-success"><i class="fa-solid fa-thumbs-up"></i></button>
-              <button type="button" class="btn btn-outline-danger"><i class="fa-solid fa-thumbs-down"></i></button>
+              <button class="btn btn-outline-success"><i class="fa-solid fa-thumbs-up"></i></button>
+              <button class="btn btn-outline-danger"><i class="fa-solid fa-thumbs-down"></i></button>
               <button class="btn btn-success d-block mt-1">Submit</button>
             </div>
           </form>
