--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -39,7 +39,7 @@
             class="form-control"
           />
         </div>
-        <button type="button" class="btn btn-success mt-3">
+        <button class="btn btn-success mt-3">
           Save Changes
         </button>
       </form>
@@ -52,7 +52,7 @@
         <h2>My Listings</h2>
       </div>
       <form>
-        <button type="button" class="btn btn-success mt-3">
+        <button class="btn btn-success mt-3">
           List A House
         </button>
       </form>
@@ -75,8 +75,8 @@
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus, inventore. Totam nesciunt ex ratione consequuntur dolorem, similique natus quo incidunt suscipit minus optio quibusdam quisquam ullam blanditiis numquam. Similique possimus hic voluptate cumque voluptas consequuntur delectus repellat eius sed perspiciatis?
                       </p>
                       <form>
-                        <button type="button" class="btn btn-outline-secondary">Edit</button>
-                        <button type="button" class="btn btn-outline-success">View</button>
+                        <button class="btn btn-outline-secondary">Edit</button>
+                        <button class="btn btn-outline-success">View</button>
                       </form>
                   </div>
                 </div>
@@ -102,8 +102,8 @@
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus, inventore. Totam nesciunt ex ratione consequuntur dolorem, similique natus quo incidunt suscipit minus optio quibusdam quisquam ullam blanditiis numquam. Similique possimus hic voluptate cumque voluptas consequuntur delectus repellat eius sed perspiciatis?
                       </p>
                       <form>
-                        <button type="button" class="btn btn-outline-secondary">Edit</button>
-                        <button type="button" class="btn btn-outline-success">View</button>
+                        <button class="btn btn-outline-secondary">Edit</button>
+                        <button class="btn btn-outline-success">View</button>
                       </form>
                   </div>
                 </div>
