linked every house with its id

--- a/views/houses/list.hbs
+++ b/views/houses/list.hbs
@@ -87,7 +87,7 @@
             <h5 class="card-title">
               <a href="">{{house.title}}</a> 
             </h5>
-            <a href="#" class="stretched-link"></a>
+            <a href="/houses/{{house._id}}" class="stretched-link"></a>
             <div class="row">
               <div class="col">
                 <i class="thup fa-solid fa-thumbs-up"></i>3 Reviews
