replaced host data

--- a/views/houses/one.hbs
+++ b/views/houses/one.hbs
@@ -73,11 +73,11 @@
       <div class=" rev container mt-5 text-start">
         <div class="row">
           <div class="col-1">
-            <img src=https://randomuser.me/api/portraits/men/11.jpg class="rounded-circle img-fluid d-flex align-items-center pt-2"/>
+            <img src= {{house.host.avatar}} class="rounded-circle img-fluid d-flex align-items-center pt-2"/>
           </div>
           <div class="col-11 mb-3">
           <span>Hosted by</span>
-          <h6>Florian Klink</h6>
+          <h6>{{house.host.name}}</h6>
           </div>
           <p>{{house.description}}</p>
           <h2>0 Reviews</h2>
