fixed HTML in edit

--- a/views/houses/edit.hbs
+++ b/views/houses/edit.hbs
@@ -7,8 +7,7 @@
     <form>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label"
-          >Short Title</label
-        >
+          >Short Title</label>
         <input
           type="email"
           class="form-control"
@@ -17,24 +16,20 @@
       </div>
       <div class="mb-3">
         <label for="exampleFormControlTextarea1" class="form-label"
-          >Description</label
-        >
+          >Description</label>
         <textarea
           class="form-control"
           rows="3"
-          placeholder="lorem"
-        ></textarea>
+          placeholder="lorem"></textarea>
       </div>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label"
-          >Number of Rooms</label
-        >
-        <input type="number" placeholder="4" class="form-control />
+          >Number of Rooms</label>
+        <input type="number" placeholder="4" class="form-control" />
       </div>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label"
-          >Location</label
-        >
+          >Location</label>
         <select class="form-select" aria-label="Default select example">
           <option selected>Koh Samui</option>
           <option value="1">Koh Phangan</option>
@@ -49,13 +44,11 @@
           type="number"
           class="form-control"
           aria-describedby="basic-addon3"
-          placeholder="350"
-        />
+          placeholder="350"/>
       </div>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label"
-          >Add Photos (up to 9)</label
-        >
+          >Add Photos (up to 9)</label>
         <input
           type="text"
           class="form-control mt-1"
