fixed values in location

--- a/views/houses/create.hbs
+++ b/views/houses/create.hbs
@@ -29,9 +29,9 @@
         >
         <select name="location" class="form-select" aria-label="Default select example">
           <option selected>Koh Samui</option>
-          <option value="1">Koh Phangan</option>
-          <option value="2">Bali</option>
-          <option value="3">Phuket</option>
+          <option value="Koh Phangan">Koh Phangan</option>
+          <option value="Bali">Bali</option>
+          <option value="Phuket">Phuket</option>
         </select>
       </div>
       <label for="basic-url" class="form-label">Price (per Night)</label>
